Added additional input fields to form.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <body>
         <h1>IT Help Desk Records</h1>
         <form>
+            <label for="issuedate">Date:</label>
+            <input type="date" name="issuedate" id="issuedate" />
             <label for="firstname">First Name:</label>
             <input type="text" name="firstname" autocomplete="off" />
             <label for="lastname">Last Name:</label>
@@ -15,6 +17,24 @@
                 <option value="WAH">WAH</option>
                 <option value="BPO">BPO</option>
             </select>
+            <label for="timein">Time In:</label>
+            <input type="time" name="timein" id="timein" />
+            <label for="timeout">Time In:</label>
+            <input type="time" name="timeout" id="timeout" />
+            <label for="category">Category:</label>
+            <select id="category" name="category">
+                <option value="New Citrix">New Citrix Issue</option>
+                <option value="Old Citrix">Old Citrix Issue</option>
+            </select>
+            <label for="resolved">Issue Resolved?</label>
+            <select id="resolved" name="resolved">
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+            </select>
+            <label for="clientid">Client Reference ID:</label>
+            <input type="text" name="clientid" id="clientid" autocomplete="off" placeholder="#000000-000000" />
+            <label for="techreport">Technician Report:</label>
+            <textarea width="500px" height="500px"></textarea>
         </form>
     </body>
 </html>
