Added Issue Type Field and Options

--- a/index.html
+++ b/index.html
@@ -26,6 +26,49 @@
                 <option value="New Citrix">New Citrix Issue</option>
                 <option value="Old Citrix">Old Citrix Issue</option>
             </select>
+            <label for="issuetype">Issue Type:</label>
+            <select id="issuetype" name="issuetype">
+                <option value="NA">Select Below:</option>
+                <option value="Transera">Transera</option>
+                <option value="Gmil">Gmil</option>
+                <option value="Dot COM">Dot COM</option>
+                <option value="Citrix Freezing">Citrix Freezing</option>
+                <option value="Disconnect Session">Disconnect Session</option>
+                <option value="Citrix">Citrix</option>
+                <option value="Oracle Password">Oracle Password</option>
+                <option value="Oracle Freezing">Oracle Freezing</option>
+                <option value="U Drive">U Drive</option>
+                <option value="Call Quality">Call Quality</option>
+                <option value="Not responding">Not responding</option>
+                <option value="Phone Not Registering">Phone Not Registering</option>
+                <option value="OD400K">OD400K</option>
+                <option value="HFA">HFA</option>
+                <option value="VPN">VPN</option>
+                <option value="Internet-Connectivity">Internet-Connectivity</option>
+                <option value="Disposition Forms">Disposition Forms</option>
+                <option value="O365 Password Reset">O365 Password Reset</option>
+                <option value="O365 Freezing">O365 Freezing</option>
+                <option value="Jukebox Password Reset">Jukebox Password Reset</option>
+                <option value="Dashboard Access">Dashboard Access</option>
+                <option value="Dashboard Password Reset">Dashboard Password Reset</option>
+                <option value="Email Password Reset">Email Password Reset</option>
+                <option value="Domain Password Reset">Domain Password Reset</option>
+                <option value="Software Install">Software Install</option>
+                <option value="Mouse">Mouse</option>
+                <option value="Keyboard">Keyboard</option>
+                <option value="Headset">Headset</option>
+                <option value="Power">Power</option>
+                <option value="Computer">Computer</option>
+                <option value="Spark Setup">Spark Setup</option>
+                <option value="Citrix Outage">Citrix Outage</option>
+                <option value="Audio Issues">Audio Issues</option>
+                <option value="Web Collect">Web Collect</option>
+                <option value="Outage">Outage</option>
+                <option value="Other">Other</option>
+                <option value="Website Block">Website Block</option>
+                <option value="Adobe">Adobe</option>
+                <option value="Oracle Issue">Oracle Issue</option>
+            </select>
             <label for="resolved">Issue Resolved?</label>
             <select id="resolved" name="resolved">
                 <option value="Yes">Yes</option>
